log/build_2024-04-09_16-14-29/maze_bot/stderr.log
  File "/home/botcanh/ROS2-Path-Planning-and-Maze-Solving/path_planning_ws/install/maze_bot/lib/python3.10/site-packages/maze_bot/maze_solver.py", line 247
    key == ord('t'):
                   ^
SyntaxError: invalid syntax

